# citycam

./: Cargo.toml  IDEAS.txt  README.md  cams.json  compose.yml  dockerfile  justfile
.github/workflows/: rust.yml
docs/: example.rs
src/: camera.rs  cli.rs  gui.rs  image_processing.rs  image_processor.rs  lib.rs  main.rs  rotation.rs  sky_detection.rs  stream.rs  utils.rs
tests/: image_processing_tests.rs  integration_tests.rs
