[package]
name = "citycam"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
regex = "1.11.1"
image = "0.25.5"
tempfile = "3.18.0"
chrono = "0.4.40"
rand = "0.9.0"
rand_distr = "0.5.1"
anyhow = "1.0.97"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Slower build, smaller size
panic = "abort"     # Remove panic unwinding
strip = true        # Strip symbols
