[package]
name = "citycam"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
dirs = "6.0.0"
image = "0.25.5"
m3u8-rs = "6.0.0"
rand = "0.9.0"
rand_distr = "0.5.1"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["blocking"] }
imageproc = "0.23.0"
tempfile = "3.18.0"
ffmpeg-next = "7.1.0"
wallpaper = "3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Slower build, smaller size
panic = "abort"     # Remove panic unwinding
strip = true        # Strip symbols
